--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,10 +23,10 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     //noinspection GradleCompatible
-    implementation 'com.google.firebase:firebase-core:16.0.1' //AGREGADO PARA FIREBASE
-    implementation 'com.google.firebase:firebase-auth:16.0.1' //CORREO CONTRASEÑA FIREBASE
-    implementation 'com.google.firebase:firebase-database:16.0.1'  //DATABASE FIREBASE
-    implementation 'com.google.firebase:firebase-storage:16.0.1' //FIREBASE STORAGE
+    implementation 'com.google.firebase:firebase-core:9.6.1' //AGREGADO PARA FIREBASE
+    implementation 'com.google.firebase:firebase-auth:9.6.1' //CORREO CONTRASEÑA FIREBASE
+    implementation 'com.google.firebase:firebase-database:9.6.1'  //DATABASE FIREBASE
+    implementation 'com.google.firebase:firebase-storage:9.6.1' //FIREBASE STORAGE
     implementation 'com.android.support:support-v4:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -36,6 +36,9 @@ dependencies {
     implementation 'com.roughike:bottom-bar:2.3.1'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation ('com.github.bumptech.glide:glide:4.7.1') {
+        exclude group: "com.android.support"
+    }
 
 }
 
